--- a/pr2_2/index.html
+++ b/pr2_2/index.html
@@ -37,7 +37,7 @@
             <section class="restaraunt">
                 <div class="section-heading">
                     <h2 class="section-title">Ресторани</h2>
-                    <input type="text" class="input input-search" placeholder="Поиск блюд и ресторанов" />
+                    <input type="text" class="input input-search" placeholder="Пошук став та ресторанів" />
                 </div>
                 <div class="cards">
                     <div class="card">
