--- a/pr2_2/index.html
+++ b/pr2_2/index.html
@@ -28,7 +28,7 @@
             </header>
 
             <section class="promo">
-                <h1 class="promo-title">Онлайн сервіс <br/>доставки їжі на дім</h1>
+                <h1 class="promo-title">Онлайн сервіс <br/>доставки їжі додому</h1>
                 <p class="promo-text">
                     Страви з улюбленого ресторану привезе кур'єр у рукавичках, масці та з антисептиком
                 </p>
@@ -53,7 +53,7 @@
                                 <div class="rating">
                                     <img src="img/Vector.svg" alt="rating" class="rating-star">
                                     4.2</div>
-                                <div class="price">от 150 грн</div>
+                                <div class="price">Від 150 грн</div>
                                 <div class="category">Піцца</div>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                                     <img src="img/Vector.svg" alt="rating" class="rating-star">
                                     4.8
                                 </div>
-                                <div class="price">от 170 грн</div>
+                                <div class="price">Від 170 грн</div>
                                 <div class="category">Піцца</div>
                             </div>
                         </div>
@@ -95,7 +95,7 @@
                                     <img src="img/Vector.svg" alt="rating" class="rating-star"> 
                                     4.7
                                 </div>
-                                <div class="price">от 80 грн</div>
+                                <div class="price">Від 80 грн</div>
                                 <div class="category">Суши</div>
                             </div>
                         </div>
@@ -117,7 +117,7 @@
                                     <img src="img/Vector.svg" alt="rating" class="rating-star">
                                     4.9
                                 </div>
-                                <div class="price">от 50 грн</div>
+                                <div class="price">Від 50 грн</div>
                                 <div class="category">Бургери</div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                                     <img src="img/Vector.svg" alt="rating" class="rating-star">
                                     3.8
                                 </div>
-                                <div class="price">от 150 грн</div>
+                                <div class="price">Від 150 грн</div>
                                 <div class="category">Піцца</div>
                             </div>
                         </div>
@@ -159,7 +159,7 @@
                                     <img src="img/Vector.svg" alt="rating" class="rating-star">
                                     3.5
                                 </div> 
-                                <div class="price">от 70 грн</div>
+                                <div class="price">Від 70 грн</div>
                                 <div class="category">Піцца</div>
                             </div>
                         </div>
