--- a/restaraunt.html
+++ b/restaraunt.html
@@ -225,8 +225,8 @@
                     </div>
                     <div class="modal-body">
                         <div class="food-row">
-                            <span class="food-name">Ролл угорь стандарт</span>
-                            <strong class="food-price">250</strong>
+                            <span class="food-name">Overlord</span>
+                            <strong class="food-price">125</strong>
                             <div class="food-counter">
                                 <button class="counter-button">-</button>
                                 <span class="counter">1</span>
@@ -235,8 +235,8 @@
                         </div>
                         <!-- /.foods-row -->
                         <div class="food-row">
-                            <span class="food-name">Ролл угорь стандарт</span>
-                            <strong class="food-price">250</strong>
+                            <span class="food-name">Overlord</span>
+                            <strong class="food-price">125</strong>
                             <div class="food-counter">
                                 <button class="counter-button">-</button>
                                 <span class="counter">1</span>
@@ -245,8 +245,8 @@
                         </div>
                         <!-- /.foods-row -->
                         <div class="food-row">
-                            <span class="food-name">Ролл угорь стандарт</span>
-                            <strong class="food-price">250</strong>
+                            <span class="food-name">Overlord</span>
+                            <strong class="food-price">125</strong>
                             <div class="food-counter">
                                 <button class="counter-button">-</button>
                                 <span class="counter">1</span>
@@ -255,8 +255,8 @@
                         </div>
                         <!-- /.foods-row -->
                         <div class="food-row">
-                            <span class="food-name">Ролл угорь стандарт</span>
-                            <strong class="food-price">250</strong>
+                            <span class="food-name">Overlord</span>
+                            <strong class="food-price">125</strong>
                             <div class="food-counter">
                                 <button class="counter-button">-</button>
                                 <span class="counter">1</span>
@@ -265,8 +265,8 @@
                         </div>
                         <!-- /.foods-row -->
                         <div class="food-row">
-                            <span class="food-name">Ролл угорь стандарт</span>
-                            <strong class="food-price">250</strong>
+                            <span class="food-name">Overlord</span>
+                            <strong class="food-price">125</strong>
                             <div class="food-counter">
                                 <button class="counter-button">-</button>
                                 <span class="counter">1</span>
@@ -278,7 +278,7 @@
                     </div>
                     <!-- /.modal-body -->
                     <div class="modal-footer">
-                        <span class="modal-pricetag">1250</span>
+                        <span class="modal-pricetag">750</span>
                         <div class="footer-buttons">
                             <button class="button button-primary">Оформить заказ</button>
                             <button class="button">Отмена</button>
