--- a/index.html
+++ b/index.html
@@ -345,5 +345,6 @@
     </main>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/disabledScroll.js"></script>
   </body>
 </html>
