--- a/restaraunt.html
+++ b/restaraunt.html
@@ -48,11 +48,11 @@
             <h2 class="section-title">Fast Pizza</h2>
             <div class="card-info">
               <div class="rating">
-                <img src="img/Vector.svg" alt="rating" class="rating-star">
+                <img src="img/Vector.svg" alt="rating" class="rating-star" />
                 4.2
               </div>
               <div class="price">від 100 грн</div>
-                <div class="category">Піцца</div>
+              <div class="category">Піцца</div>
             </div>
           </div>
           <div class="cards">
@@ -67,7 +67,10 @@
                 </div>
                 <!-- /.card-heading -->
                 <div class="card-info">
-                  <div class="ingredietns">Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка, салат "Цезарь".</div>
+                  <div class="ingredietns">
+                    Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка,
+                    салат "Цезарь".
+                  </div>
                 </div>
 
                 <div class="card-buttons">
@@ -97,7 +100,10 @@
                 </div>
                 <!-- /.card-heading -->
                 <div class="card-info">
-                  <div class="ingredietns">Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка, салат "Цезарь".</div>
+                  <div class="ingredietns">
+                    Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка,
+                    салат "Цезарь".
+                  </div>
                 </div>
 
                 <div class="card-buttons">
@@ -117,124 +123,138 @@
             <!-- /.card -->
 
             <div
-            class="card wow animate__animated animate__fadeInUp"
-            data-wow-delay="0.6s"
-          >
-            <img src="img/card3.jpg" alt="card" class="card-image" />
-            <div class="card-text">
-              <div class="card-heading">
-                <h3 class="card-title card-title-reg">Overlord</h3>
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.6s"
+            >
+              <img src="img/card3.jpg" alt="card" class="card-image" />
+              <div class="card-text">
+                <div class="card-heading">
+                  <h3 class="card-title card-title-reg">Overlord</h3>
+                </div>
+                <!-- /.card-heading -->
+                <div class="card-info">
+                  <div class="ingredietns">
+                    Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка,
+                    салат "Цезарь".
+                  </div>
+                </div>
+
+                <div class="card-buttons">
+                  <button class="button button-primary">
+                    <span class="button-card-text">В кошик</span>
+                    <img
+                      src="img/store.svg"
+                      alt="shopping-cart"
+                      class="card-button-image"
+                    />
+                  </button>
+                  <strong class="card-price-bold">120 грн</strong>
+                </div>
               </div>
-              <!-- /.card-heading -->
-              <div class="card-info">
-                <div class="ingredietns">Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка, салат "Цезарь".</div>
+              <!-- /.card-text -->
+            </div>
+            <!-- /.card -->
+
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.2s"
+            >
+              <img src="img/card4.jpg" alt="card" class="card-image" />
+              <div class="card-text">
+                <div class="card-heading">
+                  <h3 class="card-title card-title-reg">Overlord</h3>
+                </div>
+                <!-- /.card-heading -->
+                <div class="card-info">
+                  <div class="ingredietns">
+                    Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка,
+                    салат "Цезарь".
+                  </div>
+                </div>
+
+                <div class="card-buttons">
+                  <button class="button button-primary">
+                    <span class="button-card-text">В кошик</span>
+                    <img
+                      src="img/store.svg"
+                      alt="shopping-cart"
+                      class="card-button-image"
+                    />
+                  </button>
+                  <strong class="card-price-bold">120 грн</strong>
+                </div>
               </div>
+              <!-- /.card-text -->
+            </div>
+            <!-- /.card -->
 
-              <div class="card-buttons">
-                <button class="button button-primary">
-                  <span class="button-card-text">В кошик</span>
-                  <img
-                    src="img/store.svg"
-                    alt="shopping-cart"
-                    class="card-button-image"
-                  />
-                </button>
-                <strong class="card-price-bold">120 грн</strong>
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.4s"
+            >
+              <img src="img/card5.jpg" alt="card" class="card-image" />
+              <div class="card-text">
+                <div class="card-heading">
+                  <h3 class="card-title card-title-reg">Overlord</h3>
+                </div>
+                <!-- /.card-heading -->
+                <div class="card-info">
+                  <div class="ingredietns">
+                    Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка,
+                    салат "Цезарь".
+                  </div>
+                </div>
+
+                <div class="card-buttons">
+                  <button class="button button-primary">
+                    <span class="button-card-text">В кошик</span>
+                    <img
+                      src="img/store.svg"
+                      alt="shopping-cart"
+                      class="card-button-image"
+                    />
+                  </button>
+                  <strong class="card-price-bold">120 грн</strong>
+                </div>
               </div>
+              <!-- /.card-text -->
             </div>
-            <!-- /.card-text -->
-          </div>
-          <!-- /.card -->
+            <!-- /.card -->
 
-          <div
-          class="card wow animate__animated animate__fadeInUp"
-          data-wow-delay="0.2s"
-        >
-          <img src="img/card4.jpg" alt="card" class="card-image" />
-          <div class="card-text">
-            <div class="card-heading">
-              <h3 class="card-title card-title-reg">Overlord</h3>
+            <div
+              class="card wow animate__animated animate__fadeInUp"
+              data-wow-delay="0.6s"
+            >
+              <img src="img/card6.jpg" alt="card" class="card-image" />
+              <div class="card-text">
+                <div class="card-heading">
+                  <h3 class="card-title card-title-reg">Overlord</h3>
+                </div>
+                <!-- /.card-heading -->
+                <div class="card-info">
+                  <div class="ingredietns">
+                    Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка,
+                    салат "Цезарь".
+                  </div>
+                </div>
+
+                <div class="card-buttons">
+                  <button class="button button-primary">
+                    <span class="button-card-text">В кошик</span>
+                    <img
+                      src="img/store.svg"
+                      alt="shopping-cart"
+                      class="card-button-image"
+                    />
+                  </button>
+                  <strong class="card-price-bold">120 грн</strong>
+                </div>
+              </div>
+              <!-- /.card-text -->
             </div>
-            <!-- /.card-heading -->
-            <div class="card-info">
-              <div class="ingredietns">Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка, салат "Цезарь".</div>
-            </div>
-
-            <div class="card-buttons">
-              <button class="button button-primary">
-                <span class="button-card-text">В кошик</span>
-                <img
-                  src="img/store.svg"
-                  alt="shopping-cart"
-                  class="card-button-image"
-                />
-              </button>
-              <strong class="card-price-bold">120 грн</strong>
-            </div>
+            <!-- /.card -->
           </div>
-          <!-- /.card-text -->
-        </div>
-        <!-- /.card -->
-
-        <div
-        class="card wow animate__animated animate__fadeInUp"
-        data-wow-delay="0.4s"
-      >
-        <img src="img/card5.jpg" alt="card" class="card-image" />
-        <div class="card-text">
-          <div class="card-heading">
-            <h3 class="card-title card-title-reg">Overlord</h3>
-          </div>
-          <!-- /.card-heading -->
-          <div class="card-info">
-            <div class="ingredietns">Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка, салат "Цезарь".</div>
-          </div>
-
-          <div class="card-buttons">
-            <button class="button button-primary">
-              <span class="button-card-text">В кошик</span>
-              <img
-                src="img/store.svg"
-                alt="shopping-cart"
-                class="card-button-image"
-              />
-            </button>
-            <strong class="card-price-bold">120 грн</strong>
-          </div>
-        </div>
-        <!-- /.card-text -->
-      </div>
-      <!-- /.card -->
-
-      <div
-      class="card wow animate__animated animate__fadeInUp"
-      data-wow-delay="0.6s"
-    >
-      <img src="img/card6.jpg" alt="card" class="card-image" />
-      <div class="card-text">
-        <div class="card-heading">
-          <h3 class="card-title card-title-reg">Overlord</h3>
-        </div>
-        <!-- /.card-heading -->
-        <div class="card-info">
-          <div class="ingredietns">Соус "Хрестовий похід", кунжут, бекон "Камбербетч", курка, салат "Цезарь".</div>
-        </div>
-
-        <div class="card-buttons">
-          <button class="button button-primary">
-            <span class="button-card-text">В кошик</span>
-            <img
-              src="img/store.svg"
-              alt="shopping-cart"
-              class="card-button-image"
-            />
-          </button>
-          <strong class="card-price-bold">120 грн</strong>
-        </div>
-      </div>
-      <!-- /.card-text -->
-    </div>
-    <!-- /.card -->
+          <!-- /.cards -->
         </section>
       </div>
       <!-- /.container -->
@@ -244,9 +264,9 @@
             <img src="img/logo.svg" alt="logo" class="logo footer-logo" />
             <nav class="footer-nav">
               <a href="" class="footer-link">Ресторанам</a>
-              <a href="" class="footer-link">Кур'єрам</a>
-              <a href="" class="footer-link">Прес-центр</a>
-              <a href="" class="footer-link">Контакти</a>
+              <a href="" class="footer-link">Курьрам</a>
+              <a href="" class="footer-link">Пресс-центр</a>
+              <a href="" class="footer-link">Контакты</a>
             </nav>
             <div class="social-links">
               <a href="" class="social-link"
@@ -264,81 +284,78 @@
         </div>
       </footer>
 
-      
       <div class="modal">
         <div class="modal-dialog">
-            <div class="modal-header">
-                <h3 class="modal-title">Кошик</h3>
-                <button class="close">&times;</button>
+          <div class="modal-header">
+            <h3 class="modal-title">Кошик</h3>
+            <button class="close">&times;</button>
+          </div>
+          <div class="modal-body">
+            <div class="food-row">
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
+              <div class="food-counter">
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
+              </div>
             </div>
-            <div class="modal-body">
-                <div class="food-row">
-                    <span class="food-name">Overlord</span>
-                    <strong class="food-price">125</strong>
-                    <div class="food-counter">
-                        <button class="counter-button">-</button>
-                        <span class="counter">1</span>
-                        <button class="counter-button">+</button>
-                    </div>
-                </div>
-                <!-- /.foods-row -->
-                <div class="food-row">
-                    <span class="food-name">Overlord</span>
-                    <strong class="food-price">125</strong>
-                    <div class="food-counter">
-                        <button class="counter-button">-</button>
-                        <span class="counter">1</span>
-                        <button class="counter-button">+</button>
-                    </div>
-                </div>
-                <!-- /.foods-row -->
-                <div class="food-row">
-                    <span class="food-name">Overlord</span>
-                    <strong class="food-price">125</strong>
-                    <div class="food-counter">
-                        <button class="counter-button">-</button>
-                        <span class="counter">1</span>
-                        <button class="counter-button">+</button>
-                    </div>
-                </div>
-                <!-- /.foods-row -->
-                <div class="food-row">
-                    <span class="food-name">Overlord</span>
-                    <strong class="food-price">125</strong>
-                    <div class="food-counter">
-                        <button class="counter-button">-</button>
-                        <span class="counter">1</span>
-                        <button class="counter-button">+</button>
-                    </div>
-                </div>
-                <!-- /.foods-row -->
-                <div class="food-row">
-                    <span class="food-name">Overlord</span>
-                    <strong class="food-price">125</strong>
-                    <div class="food-counter">
-                        <button class="counter-button">-</button>
-                        <span class="counter">1</span>
-                        <button class="counter-button">+</button>
-                    </div>
-                </div>
-                <!-- /.foods-row -->
-                
+            <!-- /.foods-row -->
+            <div class="food-row">
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
+              <div class="food-counter">
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
+              </div>
             </div>
-            <!-- /.modal-body -->
-            <div class="modal-footer">
-                <span class="modal-pricetag">750</span>
-                <div class="footer-buttons">
-                    <button class="button button-primary">Оформить заказ</button>
-                    <button class="button">Отмена</button>
-                </div>
+            <!-- /.foods-row -->
+            <div class="food-row">
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
+              <div class="food-counter">
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
+              </div>
             </div>
-            <!-- /.modal-footer -->
-
+            <!-- /.foods-row -->
+            <div class="food-row">
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
+              <div class="food-counter">
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
+              </div>
+            </div>
+            <!-- /.foods-row -->
+            <div class="food-row">
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
+              <div class="food-counter">
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
+              </div>
+            </div>
+            <!-- /.foods-row -->
+          </div>
+          <!-- /.modal-body -->
+          <div class="modal-footer">
+            <span class="modal-pricetag">750</span>
+            <div class="footer-buttons">
+              <button class="button button-primary">Оформить заказ</button>
+              <button class="button">Отмена</button>
+            </div>
+          </div>
+          <!-- /.modal-footer -->
         </div>
         <!-- /.modal-dialog -->
-    </div>
-</main>
-<script src="js/wow.min.js"></script>
-<script src="js/main.js"></script>
-</body>
+      </div>
+    </main>
+    <script src="js/wow.min.js"></script>
+    <script src="js/main.js"></script>
+  </body>
 </html>
