--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
         <a href="index.html" class="logo">
           <img src="img/logo.svg" alt="logo" class="logo" />
         </a>
-        <input type="text" class="input input-address" placeholder="Адреса доставки">
+        <input
+          type="text"
+          class="input input-address"
+          placeholder="Адреса доставки"
+        />
         <div class="buttons">
           <span class="user-name"></span>
           <button class="button button-primary button-auth">
@@ -44,15 +48,16 @@
     <!-- /.container -->
     <main class="main">
       <div class="container">
-        <section class="promo">
-          <h1 class="promo-title">Онлайн сервіс <br />доставки їжі додому</h1>
-          <p class="promo-text">
-            Страви з улюбленого ресторану привезе кур'єр у рукавичках, масці та
-            з антисептиком
-          </p>
+        <section class="container-promo">
+          <section class="promo pizza">
+            <h1 class="promo-title">Онлайн сервіс <br />доставки їжі додому</h1>
+            <p class="promo-text">
+              Страви з улюбленого ресторану привезе кур'єр у рукавичках, масці
+              та з антисептиком
+            </p>
+          </section>
         </section>
-
-        <section class="restaraunt">
+        <section class="restaraunts">
           <div class="section-heading">
             <h2 class="section-title">Ресторани</h2>
             <input
@@ -62,163 +67,29 @@
             />
           </div>
           <div class="cards">
-            <a
-              href="restaraunt.html"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.2s"
-            >
-              <img src="img/card1.jpg" alt="card" class="card-image" />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">Fast pizza</h3>
-                  <span class="card-tag tag">55 хв</span>
-                </div>
-                <!-- /.card-heading -->
-                <div class="card-info">
-                  <div class="rating">
-                    <img src="img/Vector.svg" alt="rating" class="rating-star">
-                    4.2</div>
-                    <div class="price">Від 150 грн</div>
-                  <div class="category">Піцца</div>
-                </div>
-                <!-- /.card-text -->
-              </div>
-            </a>
-            <!-- /.card -->
-
-            <a
-              href="restaraunt.html"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.4s"
-            >
-              <img src="img/card2.jpg" alt="card" class="card-image" />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">TTP Pizza</h3>
-                  <span class="card-tag tag">40 хв</span>
-                </div>
-                <!-- /.card-heading -->
-                <div class="card-info">
-                  <div class="rating">
-                    <img src="img/Vector.svg" alt="rating" class="rating-star">
-                    4.8
-                  </div>
-                  <div class="price">Від 170 грн</div>
-                  <div class="category">Піцца</div>
-                </div>
-                <!-- /.card-text -->
-              </div>
-            </a>
-            <!-- /.card -->
-
-            <a
-              href="restaraunt.html"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.6s"
-            >
-              <img src="img/card4.jpg" alt="card" class="card-image" />
-              <div class="card-text">
-                <div class="card-heading">
-                    <h3 class="card-title">Sushi Sam</h3>
-                  <span class="card-tag tag">20 хв</span>
-
-                  <!-- /.card-heading -->
-                </div>
-                <div class="card-info">
-                  <div class="rating">
-                    <img src="img/Vector.svg" alt="rating" class="rating-star"> 
-                    4.7
-                  </div>
-                    <div class="price">Від 80 грн</div>
-                    <div class="category">Суши</div>
-                </div>
-                <!-- /.card-text -->
-              </div>
-            </a>
-            <!-- /.card -->
-
-            <a
-              href="restaraunt.html"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.2s"
-            >
-              <img src="img/card3.jpg" alt="card" class="card-image" />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">Crazy Ben</h3>
-                  <span class="card-tag tag">30 хв</span>
-                </div>
-                <!-- /.card-heading -->
-
-                <div class="card-info">
-                  <div class="rating">
-                    <img src="img/Vector.svg" alt="rating" class="rating-star">
-                    4.9
-                  </div>
-                  <div class="price">Від 50 грн</div>
-                  <div class="category">Бургери</div>
-                </div>
-                <!-- /.card-text -->
-              </div>
-            </a>
-            <!-- /.card -->
-
-            <a
-              href="restaraunt.html"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.4s"
-            >
-              <img src="img/card5.jpg" alt="card" class="card-image" />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">Table Pizza</h3>
-                  <span class="card-tag tag">85 хв</span>
-                </div>
-                <!-- /.card-heading -->
-
-                <div class="card-info">
-                  <div class="rating">
-                    <img src="img/Vector.svg" alt="rating" class="rating-star">
-                    3.8
-                  </div>
-                    <div class="price">Від 150 грн</div>
-                  <div class="category">Піцца</div>
-                </div>
-                <!-- /.card-text -->
-              </div>
-            </a>
-            <!-- /.card -->
-
-            <a
-              href="restaraunt.html"
-              class="card wow animate__animated animate__fadeInUp"
-              data-wow-delay="0.6s"
-            >
-              <img src="img/card6.jpg" alt="card" class="card-image" />
-              <div class="card-text">
-                <div class="card-heading">
-                  <h3 class="card-title">PH Pizza</h3>
-                  <span class="card-tag tag">35 хв</span>
-                </div>
-                <!-- /.card-heading -->
-
-                <div class="card-info">
-                  <div class="rating">
-                    <img src="img/Vector.svg" alt="rating" class="rating-star">
-                    3.5
-                  </div>
-                  <div class="price">Від 70 грн</div>
-                  <div class="category">Піцца</div>
-                </div>
-                <!-- /.card-text -->
-              </div>
-            </a>
             <!-- /.card -->
           </div>
           <!-- /.cards -->
         </section>
       </div>
       <!-- /.container -->
+      <div class="container">
+        <section class="menu hide">
+          <div class="section-heading">
+            <h2 class="section-title">TTP Pizza</h2>
+            <div class="card-info">
+              <div class="rating">
+                <img src="img/Vector.svg" alt="rating" class="rating-star" />
+                4.7
+              </div>
+              <div class="price">від 80 грн</div>
+              <div class="category">Піцца</div>
+            </div>
+          </div>
+          <div class="cards cards-menu">
+          <!-- /.cards -->
+        </section>
+      </div>
       <footer class="footer">
         <div class="container">
           <div class="footer-block">
@@ -254,51 +125,51 @@
             <div class="food-row">
             <span class="food-name">Overlord</span>
             <strong class="food-price">125</strong>
-            <div class="food-counter">
+              <div class="food-counter">
                 <button class="counter-button">-</button>
                 <span class="counter">1</span>
                 <button class="counter-button">+</button>
+              </div>
             </div>
-          </div>
             <!-- /.foods-row -->
             <div class="food-row">
               <span class="food-name">Overlord</span>
               <strong class="food-price">125</strong>
               <div class="food-counter">
-                  <button class="counter-button">-</button>
-                  <span class="counter">1</span>
-                  <button class="counter-button">+</button>
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
               </div>
             </div>
             <!-- /.foods-row -->
             <div class="food-row">
                 <span class="food-name">Overlord</span>
                 <strong class="food-price">125</strong>
-                <div class="food-counter">
-                    <button class="counter-button">-</button>
-                    <span class="counter">1</span>
-                    <button class="counter-button">+</button>
-                </div>
+              <div class="food-counter">
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
+              </div>
             </div>
             <!-- /.foods-row -->
             <div class="food-row">
                 <span class="food-name">Overlord</span>
                 <strong class="food-price">125</strong>
-                <div class="food-counter">
-                    <button class="counter-button">-</button>
-                    <span class="counter">1</span>
-                    <button class="counter-button">+</button>
-                </div>
+              <div class="food-counter">
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
+              </div>
             </div>
             <!-- /.foods-row -->
             <div class="food-row">
                 <span class="food-name">Overlord</span>
                 <strong class="food-price">125</strong>
-                <div class="food-counter">
-                    <button class="counter-button">-</button>
-                    <span class="counter">1</span>
-                    <button class="counter-button">+</button>
-                </div>
+              <div class="food-counter">
+                <button class="counter-button">-</button>
+                <span class="counter">1</span>
+                <button class="counter-button">+</button>
+              </div>
             </div>
             <!-- /.foods-row -->
           </div>
