--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
     <div class="container">
@@ -48,15 +52,48 @@
     <!-- /.container -->
     <main class="main">
       <div class="container">
-        <section class="container-promo">
-          <section class="promo pizza">
-            <h1 class="promo-title">Онлайн сервіс <br />доставки їжі додому</h1>
-            <p class="promo-text">
-              Страви з улюбленого ресторану привезе кур'єр у рукавичках, масці
-              та з антисептиком
-            </p>
+        <div class="swiper">
+          <section class="container-promo swiper-wrapper">
+            <section class="promo pizza swiper-slide">
+              <h1 class="promo-title">
+                Онлайн сервіс <br />доставки їжі додому
+              </h1>
+              <p class="promo-text">
+                Страви з улюбленого ресторану привезе кур'єр у рукавичках, масці
+                та з антисептиком
+              </p>
+            </section>
+            <section class="promo kebab swiper-slide">
+              <h1 class="promo-title">
+                Шашлыки на майские <br />
+                со скидкой 35%
+              </h1>
+              <p class="promo-text">
+                Закажите шашлыки в любом ресторане до 10 мая и получите скидку
+                по промокоду OMAGAD
+              </p>
+            </section>
+            <section class="promo vegetables swiper-slide">
+              <h1 class="promo-title">
+                Скидка 20% на всю еду <br />
+                по промокоду LOVE.JS
+              </h1>
+              <p class="promo-text">
+                Блюдо из ресторана привезут вместе с двумя подарочными книгами
+                по фронтенду
+              </p>
+            </section>
+            <section class="promo sushi swiper-slide">
+              <h1 class="promo-title">
+                Сеты со скидкой до 30% <br />
+                в ресторанах
+              </h1>
+              <p class="promo-text">
+                Скидки на сеты до 30 мая по промокоду DADADA
+              </p>
+            </section>
           </section>
-        </section>
+        </div>
         <section class="restaraunts">
           <div class="section-heading">
             <h2 class="section-title">Ресторани</h2>
@@ -79,14 +116,14 @@
             <h2 class="section-title">TTP Pizza</h2>
             <div class="card-info">
               <div class="rating">
-                <img src="img/Vector.svg" alt="rating" class="rating-star" />
-                4.7
+                <img src="img/star.svg" alt="rating" class="rating-star" />
+                4.5
               </div>
               <div class="price">від 80 грн</div>
               <div class="category">Піцца</div>
             </div>
           </div>
-          <div class="cards cards-menu">
+          <div class="cards cards-menu"></div>
           <!-- /.cards -->
         </section>
       </div>
@@ -123,8 +160,8 @@
           </div>
           <div class="modal-body">
             <div class="food-row">
-            <span class="food-name">Overlord</span>
-            <strong class="food-price">125</strong>
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
               <div class="food-counter">
                 <button class="counter-button">-</button>
                 <span class="counter">1</span>
@@ -143,8 +180,8 @@
             </div>
             <!-- /.foods-row -->
             <div class="food-row">
-                <span class="food-name">Overlord</span>
-                <strong class="food-price">125</strong>
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
               <div class="food-counter">
                 <button class="counter-button">-</button>
                 <span class="counter">1</span>
@@ -153,8 +190,8 @@
             </div>
             <!-- /.foods-row -->
             <div class="food-row">
-                <span class="food-name">Overlord</span>
-                <strong class="food-price">125</strong>
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
               <div class="food-counter">
                 <button class="counter-button">-</button>
                 <span class="counter">1</span>
@@ -163,8 +200,8 @@
             </div>
             <!-- /.foods-row -->
             <div class="food-row">
-                <span class="food-name">Overlord</span>
-                <strong class="food-price">125</strong>
+              <span class="food-name">Overlord</span>
+              <strong class="food-price">125</strong>
               <div class="food-counter">
                 <button class="counter-button">-</button>
                 <span class="counter">1</span>
@@ -215,7 +252,7 @@
       </div>
     </main>
     <script src="js/wow.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="js/disabledScroll.js"></script>
   </body>
 </html>
