--- a/restaraunt.html
+++ b/restaraunt.html
@@ -48,8 +48,8 @@
             <h2 class="section-title">Fast Pizza</h2>
             <div class="card-info">
               <div class="rating">
-                <img src="img/Vector.svg" alt="rating" class="rating-star" />
-                4.2
+                <img src="img/star.svg" alt="rating" class="rating-star" />
+                4.5
               </div>
               <div class="price">від 100 грн</div>
               <div class="category">Піцца</div>
@@ -93,7 +93,7 @@
               class="card wow animate__animated animate__fadeInUp"
               data-wow-delay="0.4s"
             >
-              <img src="img/card2.jpg" alt="card" class="card-image" />
+              <img src="img/card2.png" alt="card" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title card-title-reg">Overlord</h3>
@@ -126,7 +126,7 @@
               class="card wow animate__animated animate__fadeInUp"
               data-wow-delay="0.6s"
             >
-              <img src="img/card3.jpg" alt="card" class="card-image" />
+              <img src="img/card3.png" alt="card" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title card-title-reg">Overlord</h3>
@@ -148,7 +148,7 @@
                       class="card-button-image"
                     />
                   </button>
-                  <strong class="card-price-bold">120 грн</strong>
+                  <strong class="card-price-bold">100 грн</strong>
                 </div>
               </div>
               <!-- /.card-text -->
@@ -159,7 +159,7 @@
               class="card wow animate__animated animate__fadeInUp"
               data-wow-delay="0.2s"
             >
-              <img src="img/card4.jpg" alt="card" class="card-image" />
+              <img src="img/card4.png" alt="card" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title card-title-reg">Overlord</h3>
@@ -192,7 +192,7 @@
               class="card wow animate__animated animate__fadeInUp"
               data-wow-delay="0.4s"
             >
-              <img src="img/card5.jpg" alt="card" class="card-image" />
+              <img src="img/card5.png" alt="card" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title card-title-reg">Overlord</h3>
@@ -225,7 +225,7 @@
               class="card wow animate__animated animate__fadeInUp"
               data-wow-delay="0.6s"
             >
-              <img src="img/card6.jpg" alt="card" class="card-image" />
+              <img src="img/card6.png" alt="card" class="card-image" />
               <div class="card-text">
                 <div class="card-heading">
                   <h3 class="card-title card-title-reg">Overlord</h3>
