--- a/index.html
+++ b/index.html
@@ -113,14 +113,14 @@
       <div class="container">
         <section class="menu hide">
           <div class="section-heading">
-            <h2 class="section-title">TTP Pizza</h2>
+            <h2 class="section-title" id="menu101">TTP Pizza</h2>
             <div class="card-info">
               <div class="rating">
                 <img src="img/star.svg" alt="rating" class="rating-star" />
-                4.5
+                <div id="menu102">4.5</div>
               </div>
-              <div class="price">від 80 грн</div>
-              <div class="category">Піцца</div>
+              <div class="price" id="menu103">від 100 грн</div>
+              <div class="category" id="menu104">Піцца</div>
             </div>
           </div>
           <div class="cards cards-menu"></div>
