--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div class="section-heading">
             <h2 class="section-title" id="menu101">TTP Pizza</h2>
             <div class="card-info">
-              <div class="rating">
+              <div class="rating hide" id="menu105">
                 <img src="img/star.svg" alt="rating" class="rating-star" />
                 <div id="menu102">4.5</div>
               </div>
@@ -158,64 +158,13 @@
             <h3 class="modal-title">Кошик</h3>
             <button class="close">&times;</button>
           </div>
-          <div class="modal-body">
-            <div class="food-row">
-              <span class="food-name">Overlord</span>
-              <strong class="food-price">125</strong>
-              <div class="food-counter">
-                <button class="counter-button">-</button>
-                <span class="counter">1</span>
-                <button class="counter-button">+</button>
-              </div>
-            </div>
-            <!-- /.foods-row -->
-            <div class="food-row">
-              <span class="food-name">Overlord</span>
-              <strong class="food-price">125</strong>
-              <div class="food-counter">
-                <button class="counter-button">-</button>
-                <span class="counter">1</span>
-                <button class="counter-button">+</button>
-              </div>
-            </div>
-            <!-- /.foods-row -->
-            <div class="food-row">
-              <span class="food-name">Overlord</span>
-              <strong class="food-price">125</strong>
-              <div class="food-counter">
-                <button class="counter-button">-</button>
-                <span class="counter">1</span>
-                <button class="counter-button">+</button>
-              </div>
-            </div>
-            <!-- /.foods-row -->
-            <div class="food-row">
-              <span class="food-name">Overlord</span>
-              <strong class="food-price">125</strong>
-              <div class="food-counter">
-                <button class="counter-button">-</button>
-                <span class="counter">1</span>
-                <button class="counter-button">+</button>
-              </div>
-            </div>
-            <!-- /.foods-row -->
-            <div class="food-row">
-              <span class="food-name">Overlord</span>
-              <strong class="food-price">125</strong>
-              <div class="food-counter">
-                <button class="counter-button">-</button>
-                <span class="counter">1</span>
-                <button class="counter-button">+</button>
-              </div>
-            </div>
-            <!-- /.foods-row -->
-          </div>
+          <div class="modal-body"></div>
           <!-- /.modal-body -->
           <div class="modal-footer">
             <span class="modal-pricetag">1250</span>
             <div class="footer-buttons">
               <button class="button button-primary">Оформить заказ</button>
-              <button class="button">Отмена</button>
+              <button class="button clear-cart">Отмена</button>
             </div>
           </div>
           <!-- /.modal-footer -->
